objects/Deferment__c.object
<CustomObject>
    <fields>
        <fullName>Approved__c</fullName>
        <label>Approved</label>
        <summaryFilterItems>
            <field>Deferment_Approval__c.Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </summaryFilterItems>
        <summaryForeignKey>Deferment_Approval__c.Deferment__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Business_Justification__c</fullName>
        <label>Business Justification</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Credit Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Deferments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deferment_Age__c</fullName>
        <formula>Defferal_due_date__c-TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deferment Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deferment_Stage__c</fullName>
        <label>Deferment Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Documents Not Received</fullName>
                    <default>true</default>
                    <label>Documents Not Received</label>
                </value>
                <value>
                    <fullName>Documents Received</fullName>
                </value>
                <value>
                    <fullName>Documents Overdue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Defferal_due_date__c</fullName>
        <label>Deferal due date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Document_Category__c</fullName>
        <label>Document Category</label>
        <required>true</required>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Agreements</fullName>
                </value>
                <value>
                    <fullName>Collateral</fullName>
                </value>
                <value>
                    <fullName>CP&apos;s/Governance</fullName>
                </value>
                <value>
                    <fullName>Supporting Docs</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Document_Name__c</fullName>
        <label>Document Name</label>
        <required>true</required>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Facility Letter</fullName>
                </value>
                <value>
                    <fullName>Loan Agreements</fullName>
                </value>
                <value>
                    <fullName>Trade Agreements</fullName>
                </value>
                <value>
                    <fullName>Letters of Comfort</fullName>
                </value>
                <value>
                    <fullName>Subordination</fullName>
                </value>
                <value>
                    <fullName>Guarantees</fullName>
                </value>
                <value>
                    <fullName>Suretyship</fullName>
                </value>
                <value>
                    <fullName>Cessions/Policy Document/Vetting</fullName>
                </value>
                <value>
                    <fullName>Bonds</fullName>
                </value>
                <value>
                    <fullName>PoA to Register Bond</fullName>
                </value>
                <value>
                    <fullName>Lapsed Insurance</fullName>
                </value>
                <value>
                    <fullName>Confirmations</fullName>
                </value>
                <value>
                    <fullName>Fica Docs/Casa</fullName>
                </value>
                <value>
                    <fullName>Letter of Undertaking</fullName>
                </value>
                <value>
                    <fullName>JLOC/Pricing</fullName>
                </value>
                <value>
                    <fullName>EDD Form</fullName>
                </value>
                <value>
                    <fullName>Legal Opinions</fullName>
                </value>
                <value>
                    <fullName>EXCON Approval</fullName>
                </value>
                <value>
                    <fullName>Compliance Rule 63</fullName>
                </value>
                <value>
                    <fullName>Notting Letter</fullName>
                </value>
                <value>
                    <fullName>MOI/Public Documents</fullName>
                </value>
                <value>
                    <fullName>Resolution</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legal_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Legal Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Deferments_Legal</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Deferments</relationshipLabel>
        <relationshipName>Deferments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Product_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Deferments_Product_Owner</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reason_for_Deferral__c</fullName>
        <label>Reason for Deferral</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>x</fullName>
                </value>
                <value>
                    <fullName>y</fullName>
                </value>
                <value>
                    <fullName>z</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Reject</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Deferment</label>
    <nameField>
        <displayFormat>DEF#{MM}{DD}{000}</displayFormat>
        <label>Deferment  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deferments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>